--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.1 Compose Fundamentals.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.1 Compose Fundamentals.md
@@ -1,26 +1,47 @@
-# Compose Fundamentals
+## **3.1 Compose Fundamentals** (1 minggu) ⭐⭐⭐
 
-## Deskripsi
-Jetpack Compose adalah toolkit modern untuk membangun UI Android. Anda akan belajar dasar-dasar Compose dan mengapa ini merupakan masa depan UI Android.
-
-## Tujuan Pembelajaran
-- Memahami konsep declarative UI
-- Mampu membuat @Composable functions
-- Membandingkan Compose dengan pendekatan XML
-
-## Materi
-- Konsep declarative UI vs imperative UI
+### **Teknologi Modern:**
+- Jetpack Compose
 - @Composable functions
-- State dan mutableStateOf
-- Preview functions
-- Keunggulan Jetpack Compose
-- Menggantikan XML layouts
 
-## Waktu
-1 minggu
+### **Teknologi yang Ditinggalkan:**
+- XML Layouts
+- View-based UI
 
-## Prioritas
-⭐⭐⭐ (Future of Android UI)
+### **Sub-topik Detail:**
 
-## Catatan
-Jetpack Compose adalah pendekatan modern untuk membuat UI Android, menggantikan XML layouts.
+#### 1. Pengenalan Jetpack Compose
+- Apa itu Jetpack Compose dan keunggulannya
+- Perbedaan Declarative vs Imperative UI
+- Arsitektur Compose
+- Setup project Compose
+
+#### 2. @Composable Functions
+- Syntax dan struktur @Composable
+- Naming convention (PascalCase)
+- Parameter dan return type
+- Composable function rules (side-effects, order)
+
+#### 3. Compose Lifecycle
+- Composition, Recomposition, Decommission
+- Kapan recomposition terjadi
+- Smart recomposition
+- Skipping recomposition
+
+#### 4. Preview
+- @Preview annotation
+- Preview parameters
+- Multiple previews (device, font scale, theme)
+- Interactive mode
+
+#### 5. Struktur Project Compose
+- MainActivity dengan setContent
+- Menghapus XML layouts
+- Compose dependencies
+
+#### 6. Debugging Compose
+- Layout Inspector untuk Compose
+- Recomposition counts
+- Performance monitoring
+
+---
