--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.10 Custom Fonts & Icons.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.10 Custom Fonts & Icons.md
@@ -1,26 +1,57 @@
-# Custom Fonts & Icons
 
-## Deskripsi
-Untuk branding dan tampilan yang menarik, aplikasi sering menggunakan font dan ikon kustom. Anda akan belajar bagaimana mengimplementasikannya dalam Jetpack Compose.
 
-## Tujuan Pembelajaran
-- Menggunakan custom fonts dalam Compose
-- Menggunakan Icon composables
-- Mengatur typography konsisten
+## **3.10 Custom Fonts & Icons** (1 hari) ⭐⭐
 
-## Materi
-- Menggunakan custom fonts
-- Icon composable dan Material Icons
-- Typography dalam Compose
-- Font specification dan loading
-- Downloadable fonts
-- Branding dan detail UI
+### **Teknologi Modern:**
+- Typography system
+- Icon Composables
+- Font families
 
-## Waktu
-1 hari
+### **Teknologi yang Ditinggalkan:**
+- XML font definitions
+- Default system fonts/icons
 
-## Prioritas
-⭐⭐ (Branding & UI detail)
+### **Sub-topik Detail:**
 
-## Catatan
-Custom fonts dan icons penting untuk branding dan tampilan aplikasi yang unik.
+#### 1. Custom Fonts Setup
+- Download dan add font files (.ttf, .otf)
+- Font directory structure (res/font/)
+- Font family dengan multiple weights
+
+#### 2. Font Definition
+- FontFamily definition
+- Font weights (Thin, Light, Normal, Medium, SemiBold, Bold, Black)
+- Font styles (Normal, Italic)
+
+#### 3. Typography Configuration
+- Update MaterialTheme typography
+- Define text styles dengan custom fonts
+- displayLarge, titleMedium, bodySmall, dll dengan fonts
+
+#### 4. Using Custom Fonts
+- Apply di MaterialTheme
+- Use specific font untuk Text
+- fontFamily parameter di Text
+
+#### 5. Material Icons
+- Icon composable
+- Icons.Default, Icons.Filled, Icons.Outlined, Icons.Rounded, Icons.Sharp, Icons.TwoTone
+- tint parameter untuk warna icon
+- contentDescription untuk accessibility
+
+#### 6. Custom Vector Icons
+- Import vector assets (SVG to Vector Drawable)
+- painterResource untuk custom icons
+- Icon dari painter
+
+#### 7. Icon Button
+- IconButton dengan Icon
+- IconToggleButton untuk toggle states
+- Custom icon button styling
+
+#### 8. Icon Sizes & Tinting
+- Size modifier untuk icons
+- Tint dengan theme colors
+- LocalContentColor untuk automatic tinting
+
+---
