--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.11 Scaffold & AppBar.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.11 Scaffold & AppBar.md
@@ -1,27 +1,71 @@
-# Scaffold & AppBar
 
-## Deskripsi
-Scaffold menyediakan struktur dasar untuk layar aplikasi Android sesuai panduan Material Design. Anda akan belajar cara menggunakannya beserta TopAppBar dan BottomAppBar.
 
-## Tujuan Pembelajaran
-- Menggunakan Scaffold untuk struktur layar
-- Mengimplementasikan TopAppBar
-- Menggunakan BottomAppBar
+## **3.11 Scaffold & AppBar** (2 hari) ⭐⭐⭐
 
-## Materi
-- Scaffold composable
-- TopAppBar
+### **Teknologi Modern:**
+- Scaffold
+- TopAppBar (Small, Medium, Large)
 - BottomAppBar
-- FloatingActionButton dalam Scaffold
-- SnackbarHost dalam Scaffold
-- Pengganti dari custom app bar implementation
-- Best practices struktur layar
 
-## Waktu
-2 hari
+### **Teknologi yang Ditinggalkan:**
+- XML layouts dengan AppBar
+- CoordinatorLayout
 
-## Prioritas
-⭐⭐⭐ (Standard screen structure)
+### **Sub-topik Detail:**
 
-## Catatan
-Scaffold menyediakan struktur standar yang memudahkan implementasi Material Design.
+#### 1. Scaffold Basics
+- Scaffold structure
+- Material Design layout structure
+- Content slot dengan padding values
+
+#### 2. TopAppBar (Small)
+- title composable
+- navigationIcon (back button, menu icon)
+- actions (action buttons di kanan)
+- colors untuk styling
+- scrollBehavior
+
+#### 3. TopAppBar (Medium & Large)
+- Collapsing app bar behavior
+- MediumTopAppBar use cases
+- LargeTopAppBar use cases
+
+#### 4. CenterAlignedTopAppBar
+- Centered title
+- When to use
+
+#### 5. Scroll Behavior
+- TopAppBarDefaults.pinnedScrollBehavior()
+- TopAppBarDefaults.enterAlwaysScrollBehavior()
+- TopAppBarDefaults.exitUntilCollapsedScrollBehavior()
+- Integrate dengan LazyColumn dengan Modifier.nestedScroll()
+
+#### 6. BottomAppBar
+- FAB integration (cut-out)
+- Actions dalam bottom app bar
+- floatingActionButton position
+
+#### 7. FloatingActionButton
+- Regular FAB
+- Small, Large, Extended FAB
+- Position dalam Scaffold
+- Anchor to BottomAppBar
+
+#### 8. Scaffold Slots
+- topBar slot
+- bottomBar slot
+- floatingActionButton slot
+- snackbarHost slot
+- content slot
+
+#### 9. Complete Screen Example
+- Scaffold dengan semua components
+- Content padding values
+- State management untuk Scaffold
+
+#### 10. Search in AppBar
+- Expandable search
+- Search bar implementation
+- Filter results
+
+---
