--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.2 Basic Composables.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.2 Basic Composables.md
@@ -1,27 +1,67 @@
-# Basic Composables
+## **3.2 Basic Composables** (4 hari) ⭐⭐⭐
 
-## Deskripsi
-Anda akan belajar tentang Composable functions dasar yang digunakan untuk membuat UI dalam Jetpack Compose, termasuk text, image, button, dan layout elements.
+### **Teknologi Modern:**
+- Text, Image, Button
+- Column, Row, Box
 
-## Tujuan Pembelajaran
-- Menggunakan Composable dasar seperti Text, Image, Button
-- Membuat layout sederhana dengan Column, Row, Box
-- Memahami perbedaan dengan View-based UI
+### **Teknologi yang Ditinggalkan:**
+- TextView, ImageView
+- LinearLayout
 
-## Materi
-- Text composable
-- Image composable
-- Button dan variants-nya
-- Column (sebagai pengganti LinearLayout vertikal)
-- Row (sebagai pengganti LinearLayout horizontal)
-- Box (sebagai pengganti FrameLayout)
-- Perbedaan dengan TextView, ImageView, dll.
+### **Sub-topik Detail:**
 
-## Waktu
-4 hari
+#### 1. Text Composable
+- Basic Text
+- Text styling (fontSize, fontWeight, color)
+- TextStyle dan typography
+- Text overflow dan maxLines
+- TextAlign dan textDecoration
+- Annotated strings
+- Selectable text
 
-## Prioritas
-⭐⭐⭐ (Building blocks)
+#### 2. Image Composable
+- Menampilkan image dari resources (painterResource)
+- ContentScale (Crop, Fit, FillWidth, etc)
+- ContentDescription untuk accessibility
+- Placeholder dan error handling
+- Coil library untuk load image dari URL
+- Circular/rounded images dengan clip
 
-## Catatan
-Ini adalah building blocks utama dalam Jetpack Compose yang akan sering Anda gunakan.
+#### 3. Button Composables
+- Button (filled)
+- OutlinedButton
+- TextButton
+- ElevatedButton
+- FilledTonalButton
+- IconButton
+- onClick handler
+- enabled/disabled state
+- Custom button colors
+
+#### 4. Column Layout
+- Vertical arrangement (Top, Center, Bottom, SpaceBetween, SpaceAround, SpaceEvenly)
+- Horizontal alignment (Start, CenterHorizontally, End)
+- Scroll dengan verticalScroll()
+- Nested columns
+
+#### 5. Row Layout
+- Horizontal arrangement
+- Vertical alignment
+- Scroll dengan horizontalScroll()
+- Nested rows
+
+#### 6. Box Layout
+- Overlay/stacking elements
+- Alignment dalam Box
+- Z-order (urutan deklarasi)
+- matchParentSize vs fillMaxSize
+- Use cases: badges, overlays, backgrounds
+
+#### 7. Surface
+- Material surface dengan elevation
+- Background color
+- Border
+- Shape (RoundedCornerShape)
+- Click handling
+
+---
