--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.3 Layouts & Modifiers.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.3 Layouts & Modifiers.md
@@ -1,26 +1,93 @@
-# Layouts & Modifiers
 
-## Deskripsi
-Modifiers dan layout composables adalah inti dari pembuatan UI dalam Jetpack Compose. Anda akan belajar cara menyusun komponen dan menggabungkan berbagai modifikasi.
 
-## Tujuan Pembelajaran
-- Menggunakan Modifiers untuk mengubah tampilan dan perilaku composables
-- Membuat list efisien dengan Lazy composables
-- Menggunakan Spacer untuk padding dan spacing
+## **3.3 Layouts & Modifiers** (4 hari) ⭐⭐⭐
 
-## Materi
-- Konsep Modifiers
-- Penggunaan modifier dalam urutan yang benar
-- LazyColumn dan LazyRow (sebagai pengganti RecyclerView)
-- Spacer untuk spacing
-- Nested layouts
-- Konsep parenting dalam Compose
+### **Teknologi Modern:**
+- LazyColumn, LazyRow
+- Spacer
+- Modifier (comprehensive)
 
-## Waktu
-4 hari
+### **Teknologi yang Ditinggalkan:**
+- RecyclerView
+- ConstraintLayout
 
-## Prioritas
-⭐⭐⭐ (UI composition)
+### **Sub-topik Detail:**
 
-## Catatan
-Modifiers adalah cara utama dalam Compose untuk menggabungkan styling, layout, dan event handling.
+#### 1. LazyColumn
+- Basic LazyColumn dengan items()
+- items() dengan list data
+- itemsIndexed() dengan index
+- item() untuk single item
+- Key parameter untuk stabilitas
+- contentPadding
+- reverseLayout
+- State management dengan rememberLazyListState()
+- Scroll to position programmatically
+- Sticky headers dengan stickyHeader()
+
+#### 2. LazyRow
+- Horizontal scrolling list
+- Similar APIs dengan LazyColumn
+- Use cases: horizontal carousels, chips
+
+#### 3. LazyVerticalGrid
+- Grid dengan columns fixed atau adaptive
+- GridCells.Fixed(count)
+- GridCells.Adaptive(minSize)
+- Span untuk item berbeda
+
+#### 4. Spacer
+- Memberikan spacing fixed
+- Modifier.height() dan width()
+- Alternatif padding
+
+#### 5. Modifier Deep Dive
+**Size Modifiers:**
+- size(width, height)
+- width(), height()
+- fillMaxWidth(), fillMaxHeight(), fillMaxSize()
+- wrapContentSize(), wrapContentWidth(), wrapContentHeight()
+- requiredSize() vs size()
+- defaultMinSize()
+
+**Padding & Margin:**
+- padding(all)
+- padding(horizontal, vertical)
+- padding(start, top, end, bottom)
+- Tidak ada margin di Compose (gunakan padding parent)
+
+**Background & Border:**
+- background(color)
+- background(brush) untuk gradient
+- border(width, color, shape)
+
+**Shape & Clipping:**
+- clip(shape) - RoundedCornerShape, CircleShape
+- Custom shapes
+
+**Click & Interaction:**
+- clickable { }
+- clickable dengan indication dan interactionSource
+- combinedClickable untuk long press
+
+**Alignment & Position:**
+- align() dalam Box/Column/Row
+- offset(x, y)
+- absoluteOffset()
+
+**Other Important Modifiers:**
+- alpha() untuk transparency
+- rotate(), scale()
+- shadow() untuk elevation effect
+- weight() untuk flexible sizing dalam Row/Column
+- aspectRatio()
+
+#### 6. Modifier Order
+- Pentingnya urutan modifier
+- Contoh: padding -> background vs background -> padding
+
+#### 7. Custom Modifiers
+- Membuat extension function Modifier
+- Reusable modifier chains
+
+---
