--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.4 State Management.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.4 State Management.md
@@ -1,26 +1,59 @@
-# State Management
 
-## Deskripsi
-State management adalah konsep penting dalam Jetpack Compose. Anda akan belajar bagaimana mengelola state di dalam komponen Compose.
 
-## Tujuan Pembelajaran
-- Memahami konsep state dalam Compose
-- Menggunakan remember dan mutableStateOf
-- Menggunakan rememberSaveable untuk menyimpan state
+## **3.4 State Management** (3 hari) ⭐⭐⭐
 
-## Materi
-- Konsep state dalam Compose
-- remember dan mutableStateOf
+### **Teknologi Modern:**
+- remember
+- mutableStateOf
 - rememberSaveable
-- State hoisting dasar
-- Composition dan recomposition
-- State vs instance variable
 
-## Waktu
-3 hari
+### **Teknologi yang Ditinggalkan:**
+- findViewById
+- view binding untuk state
 
-## Prioritas
-⭐⭐⭐ (Core Compose concept)
+### **Sub-topik Detail:**
 
-## Catatan
-State management adalah konsep inti dalam Compose yang membedakannya dari pendekatan View-based.
+#### 1. Konsep State di Compose
+- Apa itu state
+- State triggers recomposition
+- Read and write state
+- Stateless vs Stateful composables
+
+#### 2. remember
+- Menyimpan nilai across recomposition
+- Contoh: `val count = remember { mutableStateOf(0) }`
+- remember akan reset saat configuration change
+
+#### 3. mutableStateOf
+- Creating observable state
+- State<T> vs MutableState<T>
+- Destructuring: `val (value, setValue) = remember { mutableStateOf("") }`
+- Delegation: `var value by remember { mutableStateOf("") }`
+
+#### 4. rememberSaveable
+- Survive configuration changes
+- Saved Instance State di Compose
+- Custom Saver untuk complex objects
+
+#### 5. State Hoisting
+- Konsep: lift state up ke parent
+- Stateless composables lebih reusable
+- Pattern: pass value dan callback
+- Contoh: TextField stateless
+
+#### 6. Unidirectional Data Flow
+- State flows down, events flow up
+- Single source of truth
+- Predictable state management
+
+#### 7. derivedStateOf
+- Computed state dari state lain
+- Optimasi recomposition
+- Kapan menggunakan derivedStateOf
+
+#### 8. State in Lists
+- State untuk each item
+- Key parameter importance
+- Remember state per item
+
+---
