--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.5 Material Design 3.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.5 Material Design 3.md
@@ -1,26 +1,99 @@
-# Material Design 3
 
-## Deskripsi
-Material Design 3 adalah versi terbaru dari desain Material Google. Anda akan belajar bagaimana menerapkan komponen dan tema Material Design 3 dalam aplikasi Compose Anda.
 
-## Tujuan Pembelajaran
-- Memahami perbedaan Material Design 3 dengan versi sebelumnya
-- Menggunakan komponen Material Design 3
-- Membuat tema dan menerapkannya
+## **3.5 Material Design 3** (3 hari) ⭐⭐⭐
 
-## Materi
-- Konsep Material Design 3
+### **Teknologi Modern:**
+- Material 3 components
+- Theme, Colors
+- Material You
+
+### **Teknologi yang Ditinggalkan:**
+- Material Design 1
+- XML themes
+
+### **Sub-topik Detail:**
+
+#### 1. Pengenalan Material Design 3
+- Material You concept
 - Dynamic color
-- Components Material 3 (Button, Card, TextField, dll.)
-- Themes dan color schemes
-- Typography dalam Material 3
-- Mengganti Material Design 1
+- Perbedaan M2 vs M3
 
-## Waktu
-3 hari
+#### 2. Color System
+- ColorScheme (primary, secondary, tertiary, etc.)
+- Light dan dark color schemes
+- Dynamic colors (Android 12+)
+- Custom color scheme
+- Surface tints
+- Color roles (onPrimary, onSurface, etc.)
 
-## Prioritas
-⭐⭐⭐ (Modern UI design)
+#### 3. Typography
+- Material 3 type scale
+- displayLarge, displayMedium, displaySmall
+- headlineLarge, headlineMedium, headlineSmall
+- titleLarge, titleMedium, titleSmall
+- bodyLarge, bodyMedium, bodySmall
+- labelLarge, labelMedium, labelSmall
+- Custom typography
 
-## Catatan
-Material Design 3 memberikan pengalaman pengguna yang lebih konsisten dan modern.
+#### 4. Shapes
+- Shape scale (small, medium, large, extraLarge)
+- RoundedCornerShape, CutCornerShape
+- Custom shapes
+
+#### 5. MaterialTheme
+- Setup MaterialTheme
+- Accessing theme values (colors, typography, shapes)
+- Theme composition
+
+#### 6. Material 3 Components
+
+**Cards:**
+- Card
+- ElevatedCard
+- OutlinedCard
+
+**Buttons:** (sudah di 3.2, tapi detail M3)
+- FilledButton, OutlinedButton, TextButton
+- FilledTonalButton, ElevatedButton
+- IconButton variants
+
+**Text Fields:**
+- TextField
+- OutlinedTextField
+
+**Selection Controls:**
+- Checkbox
+- Switch
+- RadioButton
+- TriStateCheckbox
+
+**App Bars:**
+- TopAppBar (Small, Medium, Large)
+- CenterAlignedTopAppBar
+- BottomAppBar
+
+**FAB:**
+- FloatingActionButton
+- SmallFloatingActionButton
+- LargeFloatingActionButton
+- ExtendedFloatingActionButton
+
+**Navigation:**
+- NavigationBar
+- NavigationRail
+- NavigationDrawer
+
+**Progress Indicators:**
+- LinearProgressIndicator
+- CircularProgressIndicator
+
+**Sliders:**
+- Slider
+- RangeSlider
+
+#### 7. Dark Theme
+- isSystemInDarkTheme()
+- Implementasi dark theme
+- Dynamic theme switching
+
+---
