--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.6 User Input.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.6 User Input.md
@@ -1,26 +1,67 @@
-# User Input
 
-## Deskripsi
-Mengelola input dari pengguna adalah bagian penting dari aplikasi. Dalam Compose, ada pendekatan yang berbeda untuk menangani input pengguna.
 
-## Tujuan Pembelajaran
-- Menggunakan TextField untuk input teks
-- Menangani klik dan interaksi lainnya
-- Membuat UI yang responsif terhadap input pengguna
+## **3.6 User Input** (2 hari) ⭐⭐⭐
 
-## Materi
-- TextField dalam Compose
-- onClick handlers
-- Checkbox, Switch, RadioButton
-- InteractionState
-- Pengganti EditText dan Button XML
-- Input validation dasar
+### **Teknologi Modern:**
+- TextField, Button
+- onClick, Checkbox
+- Modern input handling
 
-## Waktu
-2 hari
+### **Teknologi yang Ditinggalkan:**
+- EditText XML
+- Button XML
 
-## Prioritas
-⭐⭐⭐ (Interactivity)
+### **Sub-topik Detail:**
 
-## Catatan
-Kemampuan menangani input pengguna adalah dasar dari aplikasi interaktif.
+#### 1. TextField & OutlinedTextField
+- Basic usage dengan value dan onValueChange
+- Label, placeholder
+- Leading/trailing icons
+- supportingText (helper text)
+- isError state
+- singleLine vs maxLines
+- readOnly state
+- enabled/disabled
+- TextFieldColors untuk styling
+
+#### 2. Keyboard Options
+- KeyboardOptions:
+  - keyboardType (Text, Number, Email, Phone, Password, etc.)
+  - imeAction (Done, Next, Search, Send, etc.)
+  - capitalization
+  - autoCorrect
+- KeyboardActions (onDone, onNext, onSearch, etc.)
+
+#### 3. Text Field State Management
+- State hoisting untuk TextField
+- Form validation
+- Error handling dan display
+
+#### 4. Password TextField
+- visualTransformation = PasswordVisualTransformation()
+- Toggle visibility dengan trailing icon
+
+#### 5. Button Interactions
+- onClick handler
+- enabled state berdasarkan form validation
+- Loading state dalam button
+- Ripple effect
+
+#### 6. Checkbox
+- checked state
+- onCheckedChange callback
+- Tri-state checkbox untuk "select all"
+- Custom colors
+
+#### 7. Switch & RadioButton
+- Switch implementation
+- RadioButton groups
+- State management untuk multiple options
+
+#### 8. Focus Management
+- FocusRequester
+- Request focus programmatically
+- Focus order dalam form
+- Clear focus
+
+---
