--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.7 Lists & Grids.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.7 Lists & Grids.md
@@ -1,26 +1,71 @@
-# Lists & Grids
 
-## Deskripsi
-Membuat list dan grid yang efisien sangat penting dalam aplikasi. Jetpack Compose menyediakan Lazy composables yang efisien secara performa.
 
-## Tujuan Pembelajaran
-- Menggunakan LazyColumn dan LazyRow untuk list
-- Menggunakan LazyVerticalGrid untuk grid
-- Memahami efisiensi rendering dalam Compose
+## **3.7 Lists & Grids** (3 hari) ⭐⭐⭐
 
-## Materi
-- LazyColumn sebagai pengganti RecyclerView
-- LazyRow untuk list horizontal
-- LazyVerticalGrid untuk layout grid
-- Items dan item dalam Lazy composables
-- DiffUtil equivalent dalam Compose
-- Performance considerations
+### **Teknologi Modern:**
+- LazyColumn
+- LazyVerticalGrid
+- items() DSL
 
-## Waktu
-3 hari
+### **Teknologi yang Ditinggalkan:**
+- RecyclerView adapter
+- ViewHolder pattern
 
-## Prioritas
-⭐⭐⭐ (Efficient lists)
+### **Sub-topik Detail:**
 
-## Catatan
-Lazy composables adalah pendekatan modern untuk membuat list yang efisien dan performa tinggi.
+#### 1. LazyColumn Advanced
+- items() dengan list
+- itemsIndexed() dengan index
+- item() untuk single item atau mixed content
+- Key parameter untuk item identity
+- contentType untuk performance
+- contentPadding untuk padding list
+- reverseLayout untuk reverse order
+- LazyListState untuk control scroll
+
+#### 2. LazyRow Advanced
+- Similar dengan LazyColumn
+- Horizontal scrolling use cases
+- Horizontal spacing dengan Arrangement
+
+#### 3. LazyVerticalGrid
+- GridCells.Fixed(columnCount)
+- GridCells.Adaptive(minSize) untuk responsive
+- items() dalam grid
+- Span untuk item dengan width berbeda
+
+#### 4. Item Keys
+- Pentingnya stable keys
+- Performance optimization
+- Avoid using index as key
+
+#### 5. Scroll State & Control
+- rememberLazyListState()
+- Scroll to position: animateScrollToItem()
+- firstVisibleItemIndex
+- Detect scroll: derivedStateOf
+- Show/hide FAB on scroll
+
+#### 6. Sticky Headers
+- stickyHeader() dalam LazyColumn
+- Use cases: grouped lists
+
+#### 7. Item Animations
+- Built-in animations
+- Custom item animations dengan animateItemPlacement()
+
+#### 8. Load More / Pagination
+- Detect when reaching end of list
+- Show loading indicator
+- LaunchedEffect untuk load data
+
+#### 9. Pull to Refresh
+- Implementasi pull-to-refresh pattern
+- SwipeRefresh (Accompanist atau manual)
+
+#### 10. Empty State & Error Handling
+- Show placeholder when list empty
+- Error state handling
+- Retry mechanism
+
+---
