--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.8 Compose Previews.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.8 Compose Previews.md
@@ -1,27 +1,56 @@
-# Compose Previews
 
-## Deskripsi
-Compose Preview memungkinkan Anda melihat tampilan komponen langsung di Android Studio tanpa harus menjalankan aplikasi. Ini mempercepat iterasi UI.
 
-## Tujuan Pembelajaran
-- Menggunakan @Preview annotation
-- Membuat preview dengan parameter berbeda
-- Mempercepat iterasi UI
+## **3.8 Compose Previews** (2 hari) ⭐⭐
 
-## Materi
+### **Teknologi Modern:**
 - @Preview annotation
-- PreviewParameter
-- Multiple previews
-- Device dan size variations
-- Dark mode preview
-- Pengganti dari run app untuk melihat UI
-- Interaction dengan UI dalam preview
+- Preview parameters
+- Interactive previews
 
-## Waktu
-2 hari
+### **Teknologi yang Ditinggalkan:**
+- Harus run app untuk lihat UI
 
-## Prioritas
-⭐⭐ (Fast iteration)
+### **Sub-topik Detail:**
 
-## Catatan
-Preview sangat meningkatkan produktivitas dalam pengembangan UI.
+#### 1. Basic @Preview
+- @Preview annotation syntax
+- Preview di Android Studio
+- Refresh preview
+
+#### 2. Preview Parameters
+- name: memberikan nama preview
+- showBackground: tampilkan background
+- backgroundColor: warna background custom
+- showSystemUi: tampilkan status bar & nav bar
+- device: specify device (Devices.PIXEL_4, dll)
+- uiMode: UI_MODE_NIGHT_YES untuk dark theme
+- fontScale: test dengan font scale berbeda
+- locale: test dengan bahasa berbeda
+- widthDp, heightDp: custom size
+
+#### 3. Multiple Previews
+- Buat multiple @Preview untuk different states
+- Light dan dark theme previews
+- Different device sizes
+- Different orientations
+
+#### 4. @PreviewParameter
+- Generate multiple previews dengan data berbeda
+- PreviewParameterProvider implementation
+- values() untuk provide sample data
+
+#### 5. Preview Groups
+- @Preview annotation pada annotation class
+- Reusable preview configurations
+
+#### 6. Interactive Preview Mode
+- Deploy ke emulator dari preview
+- Test interaksi langsung
+
+#### 7. Preview Best Practices
+- Preview semua states (empty, loading, error, success)
+- Preview edge cases
+- Keep preview functions lightweight
+- Separate preview data dari production
+
+---
