--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.9 Dialogs Snackbar BottomSheet.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.9 Dialogs Snackbar BottomSheet.md
@@ -1,26 +1,58 @@
-# Dialogs, Snackbar, BottomSheet
 
-## Deskripsi
-Material 3 Composables menyediakan komponen standar untuk komunikasi dengan pengguna seperti AlertDialog, Snackbar, dan BottomSheet. Anda akan belajar cara menggunakannya dalam Compose.
 
-## Tujuan Pembelajaran
-- Menggunakan AlertDialog dalam Compose
-- Menampilkan Snackbar untuk pesan singkat
-- Menggunakan BottomSheet untuk konten tambahan
+## **3.9 Dialogs, Snackbar, BottomSheet** (2 hari) ⭐⭐⭐
 
-## Materi
-- AlertDialog dalam Compose
-- Basic dan Action Snackbar
-- ModalBottomSheet dan StandardBottomSheet
-- State management untuk komponen-komponen ini
-- Custom dialogs vs Material components
-- Best practices penggunaan
+### **Teknologi Modern:**
+- Material 3 Composables
+- AlertDialog, Snackbar, BottomSheet
 
-## Waktu
-2 hari
+### **Teknologi yang Ditinggalkan:**
+- DialogFragment
+- Custom dialog XML
 
-## Prioritas
-⭐⭐⭐ (Standard communication)
+### **Sub-topik Detail:**
 
-## Catatan
-Komponen-komponen ini menyediakan cara standar dan familiar bagi pengguna untuk berinteraksi.
+#### 1. AlertDialog
+- Basic AlertDialog
+- onDismissRequest
+- confirmButton dan dismissButton
+- title dan text content
+- icon
+- Custom content dalam dialog
+- Dialog state management
+
+#### 2. Custom Dialogs
+- Dialog composable (full custom)
+- DialogProperties (dismissOnBackPress, dismissOnClickOutside)
+- Custom shapes dan styling
+
+#### 3. Snackbar
+- SnackbarHost dan SnackbarHostState
+- Show snackbar dengan scaffoldState
+- Snackbar dengan action button
+- Duration: Short, Long, Indefinite
+- SnackbarResult untuk handle action
+- Custom Snackbar
+
+#### 4. ModalBottomSheet
+- Basic ModalBottomSheet
+- sheetState management
+- Show/hide dengan coroutine
+- onDismissRequest
+- Custom sheet content
+- BottomSheetDefaults untuk styling
+
+#### 5. ModalBottomSheet vs Standard BottomSheet
+- Perbedaan dan use cases
+- BottomSheetScaffold untuk persistent bottom sheet
+
+#### 6. Integration dengan Scaffold
+- SnackbarHost dalam Scaffold
+- Coordinate multiple UI elements
+
+#### 7. State Management
+- Remember dialog state
+- Remember bottom sheet state
+- Trigger show/hide dari events
+
+---
