--- a/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.4 State Management.md
+++ b/docs/document/LEVEL 1 BEGINNER/Fase 3 Jetpack Compose Basics/3.4 State Management.md
@@ -747,7 +747,7 @@ fun RegistrationForm() {
 - Otomatis memicu recomposition saat berubah
 - Menggunakan `by` delegation atau destructuring
 
-**State<T> vs MutableState<T>:**
+**`State<T>` vs `MutableState<T>`:**
 - `State<T>`: hanya bisa baca (read-only)
 - `MutableState<T>`: bisa baca dan tulis
 
